Metrics and Dahsboard
* Added errors count for blueprint in metrics service
* Added last logs for FileTarget's
* Updated dashboard for added data in metrics service

--- a/JustConveyor/samples/IntegersMultiplier/NLog.config
+++ b/JustConveyor/samples/IntegersMultiplier/NLog.config
@@ -7,6 +7,11 @@
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
   <targets>
+    <target xsi:type="File"
+            name="mainLogFile"
+            encoding="utf-8" 
+            fileName="${basedir}/logs/${cached:${date:format=yyyy-MM-dd_HH-mm-ss}:cached=true}.log"
+            layout="${longdate} | ${uppercase:${level}} | ${message}" />
     <target name="coloredConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false"
             layout="${longdate} | ${pad:padding=5:inner=${level:uppercase=true}} | ${message}">
       <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
@@ -19,5 +24,6 @@
 
   <rules>
     <logger name="*" minlevel="Trace" writeTo="coloredConsole" />
+    <logger name="*" minlevel="Trace" writeTo="mainLogFile" />
   </rules>
 </nlog>
