--- a/JustConveyor.WebAdmin/JustConveyor.WebAdmin/bower.json
+++ b/JustConveyor.WebAdmin/JustConveyor.WebAdmin/bower.json
@@ -7,11 +7,7 @@
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.6",
     "vue": "^2.4.2",
-    "datatables.net": "^1.10.16",
-    "datatables.net-bs": "^2.1.1",
-    "datatables.net-select": "^1.2.3",
-    "datatables.net-select-bs": "^1.2.3",
-    "underscore": "^1.8.3",
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "lodash": "^4.17.4"
   }
 }
